cabal-version:       2.4

name:                postgresql-resilient
version:             0.1.0.0
synopsis:            PostgreSQL single-connection pool with automatic reconnection support, built on top of postgresql-simple.
license:             Apache-2.0
license-file:        LICENSE
author:              Gabriel Volpe
maintainer:          volpegabriel@gmail.com
category:            Database
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Database.PostgreSQL.Logger
                     , Database.PostgreSQL.Resilient
  build-depends:       base
                     , exceptions
                     , postgresql-simple
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
